# kalman-filter

./: CMakeLists.txt  KalmanFilter1D.cpp  LICENSE  README.md  Utils.cpp  kalmanOpenCVsample.cpp  kalmanThermometer.cpp  kalmanThermometerOpenCV.cpp
include/: KalmanFilter1D.hpp  Utils.hpp
